k8s/demo/hello-app/httproute.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  parentRefs:
  - name: external-http
    namespace: gateway-system
  hostnames:
  - "meatcloud.io"
  rules:
  - backendRefs:
    - name: web
      port: 8080
