k8s/demo/hello-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress3
  annotations:
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    # kubernetes.io/ingress.global-static-ip-name: meatcloud
    kubernetes.io/ingress.class: gce
    cert-manager.io/cluster-issuer: letsencrypt-staging # cert-manager
spec:
  ingressClassName: gce # This tells Google Cloud to create an External Load Balancer to realize this Ingress
  defaultBackend:
    service:
      name: web
      port:
        number: 8080
  tls:
  - secretName: web-ssl
    hosts:
    - '*.meatcloud.io'
